--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 body {
     text-align: center;
 }
+
+#congratulationsModal {
+	display: none;
+	margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
