--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,24 @@ body {
 	display: none;
 	margin: 0;
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-color: #F0ECE2;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #8C8B8A;
+}
+
+h1 {
+	font-size: 45px;
+	margin-left: 8px;
+	margin-right: 8px;
+	color: #414140;
+	font-family: 'Josefin Sans', sans-serif;
+}
+
+button {
+	margin-top: 8px;
+	margin-bottom: 8px;
 }
