--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ h1 {
 	font-size: 45px;
 	margin-left: 8px;
 	margin-right: 8px;
+	margin-top: 35px;
 	color: #414140;
 	font-family: 'Josefin Sans', sans-serif;
 }
